@@ -89,6 +89,7 @@ The following people are not part of the development team, but have been contrib
 * Hudson Oliveira (hdpoliveira) - Misc.
 * Jim Verheijde (Jimver) - Make handymen less likely to get stuck in queue lines, misc.
 * Helio Batimarqui (batimarqui) - Misc.
+* Stephan Spengler (Sadret) - Plugin API improvements.
 
 ## Bug fixes
 * (halfbro)
@@ -156,7 +157,6 @@ The following people are not part of the development team, but have been contrib
 * Simon Jarrett (mwnciau)
 * Richard Fine (richard-fine)
 * Tom Parsons (tombomp)
-* Stephan Spengler (Sadret)
 * Roger Seekell (rpstester)
 
 ## Toolchain
